vlib/v/scanner/tests/unknown_escape_sequence_err.vv
fn main() {
	println('¯\_(ツ)_/¯')
}
